--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -1,18 +1,30 @@
- @mixin title1 {
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 33px;
-    margin-bottom: 0px;
+@import "./media";
+@mixin title1 {
+  background: transparent;
+  border: none;
+  font-weight: bold;
+  font-size: 20px;
+  margin-right: 8px;
+  padding: 8px 12px;
+  @include respond-above("lg") {
+    font-size: 22px;
+    margin-right: 8px;
+    padding: 8px 12px;
+  }
+  @include respond-above("sm") {   
+    margin-right: 5px;
+    padding: 6px 8px;
+
+  }
 }
- @mixin title2 {
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 33px;
-    margin-bottom: 0px;
+@mixin title2 {
+  font-weight: normal;
+  font-size: 20px;
+  margin-bottom: 0px;
 }
- @mixin title3 {
-    font-size: 36px;
-    margin-bottom: 0px;
-    padding-top: 0px;
-    margin-top: 0px;
+@mixin title3 {
+  font-size: 16px;
+  margin-bottom: 0px;
+  padding-top: 0px;
+  margin-top: 0px;
 }
