Responsive design Done

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -30,8 +30,11 @@ body {
   .row {
     width: 100%;
     display: grid;
+
     @include respond-above("lg") {
+      border-bottom: 1px solid $border;
       grid-template-columns: 25% 75% !important;
+      margin-bottom: 20px;
 
       gap: 30px;
     }
@@ -48,13 +51,15 @@ body {
       gap: 30px;
     }
   }
-  .col-1 {
-    @include respond-above("md") {
+  .landscape{
+    width: 70%;
+    margin: 0 auto;
+    max-height: 150px;
+    min-height: 50px;
+    img{
+      width: 100%;
+      height: 100%;
     }
-    @include respond-between(sm, md) {
-    }
-  }
-  .col-2 {
   }
 }
 
@@ -242,15 +247,6 @@ footer {
   
   
   padding: 20px 0px;
-  .landscape{
-    width: 70%;
-    margin: 0 auto;
-    max-height: 150px;
-    min-height: 50px;
-    img{
-      width: 100%;
-      height: 100%;
-    }
-  }
+ 
 
 }
